--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
 
   </div>
-  <div> <video  loop autoplay src="video.mp4"></video>
+  <div> <video  loop autoplay src="video2.mp4"></video>
   </div>
   <div id="testo">
     <h1 id="f0">Client testimonials</h1>
