--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
     </div>
 
   </div>
-  <div> <video  loop autoplay src="video2.mp4"></video>
+  <div> <video id="vid" loop autoplay muted src="video.mp4"></video>
   </div>
+  <script>
+    document.getElementById('vid').play();
+</script>
+
   <div id="testo">
     <h1 id="f0">Client testimonials</h1>
     <div id="box">
