--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 
 <body>
   <div id="home" class="container-fluid">
-    <audio src="https://api.soundcloud.com/tracks/143041228/stream?client_id=587aa2d384f7333a886010d5f52f302a"
+    <audio id="aud" src="https://api.soundcloud.com/tracks/143041228/stream?client_id=587aa2d384f7333a886010d5f52f302a"
       controls="" autoplay loop="">
       <p>If you are reading this, it is because your browser does not support the audio element.</p>
     </audio>
+    <script>
+      document.getElementById('aud').play()
+    </script>
     <div id="header">
       <div id="logo">Sunnyside</div><img onclick="showmenu()" id="menu" src="images/icon-hamburger.svg" alt="">
       <img onclick="hidemenu()" src="images/icon-close.svg" alt="" id="close">
@@ -88,9 +91,6 @@
   </div>
   <div> <video id="vid" loop autoplay muted src="video.mp4"></video>
   </div>
-  <script>
-    document.getElementById('vid').play();
-</script>
 
   <div id="testo">
     <h1 id="f0">Client testimonials</h1>
