--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
     </div>
 
   </div>
-  <div> <video id="vid" loop autoplay muted src="video.mp4"></video>
+  <div> <video loop autoplay muted>
+    <source src="video.mp4">
+    <source src="video2.mp4">
+    Your browser does not support the video
+  </video>
   </div>
 
   <div id="testo">
