--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
   <div> <video loop autoplay muted>
     <source src="video.mp4">
     <source src="video2.mp4">
+        <source src="video3.mp4">
+    <source src="video4.mp4">
+
     Your browser does not support the video
   </video>
   </div>
