--- a/index.html
+++ b/index.html
@@ -91,11 +91,9 @@
     </div>
 
   </div>
-  <div> <video loop autoplay muted>
+  <div> <video loop autoplay muted poster="images/desktop/jac.jpg">
+
       <source src="video.mp4">
-      <source src="video2.mp4">
-      <source src="video3.mp4">
-      <source src="video4.mp4">
 
       Your browser does not support the video
     </video>
