--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       }
     </script>
     <div id="header">
-      <div id="logo">Sunnyside</div><img onclick="showmenu()" id="menu" src="images/icon-hamburger.svg" alt="">
+      <div id="logo">Sunnyside 
+    </div><img onclick="showmenu()" id="menu" src="images/icon-hamburger.svg" alt="">
       <img onclick="hidemenu()" src="images/icon-close.svg" alt="" id="close">
       </button>
       <div id="links">
@@ -48,6 +49,8 @@
       <p>We are creatives</p>
     </div>
     <img id="arrow" src="images/icon-arrow-down.svg" alt="">
+    <div id="clicko">click me</div>
+    <div id="better"></div>
   </div>
 
   <div id="lemons">
@@ -56,11 +59,11 @@
       <p id="p1" class="writing"> We are a full-service creative agency specializing in helping brands grow fast.
         Engage your clients through compelling visuals that do most of the marketing for you.
       </p>
-      <a class="writing" href="#"> Learn more
+      <a id="learn1" class="writing" href="#"> Learn more
       </a>
     </div>
     <div class="pieces"><img id="imgz" src="images/desktop/image-transform.jpg" alt=""></div>
-    <div class="pieces"><img src="images/desktop/image-stand-out.jpg" alt=""></div>
+    <div class="pieces"><img id="imgx" src="images/desktop/image-stand-out.jpg" alt=""></div>
     <div id="para2a" class="pieces">
       <h1 class="writing"> Stand out to the right audience
       </h1>
@@ -69,7 +72,7 @@
         copywriters, we’ll
         build and extend your brand in digital places.
       </p>
-      <a class="writing" href="#"> Learn more
+      <a id="learn2" class="writing" href="#"> Learn more
       </a>
     </div>
     <div class="pieces"><img src="images/desktop/image-graphic-design.jpg" alt="">
@@ -94,6 +97,9 @@
   <div> <video loop autoplay muted poster="images/desktop/jac.jpg">
 
       <source src="video.mp4">
+      <source src="video2.mp4">
+      <source src="video3.mp4">
+      <source src="video4.mp4">
 
       Your browser does not support the video
     </video>
